# stagix

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix  style.css
src/: html.rs  lib.rs  main.rs
