[package]
name = "stagix"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.98"
build_html = "2.6.0"
clap = { version = "4.5.40", features = ["derive"] }
gix = "0.72.1"
gix-date = "0.10.2"
nix = { version = "0.30.1", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "stagix-repo"

[[bin]]
name = "stagix-index"

[[bin]]
name = "stagix-pages"
